--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -29,6 +29,12 @@
 - name: "rust-1.57-default-upx"
   lang: "[Rust][] 1.57"
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and packed with [upx][]."
+- name: "rust-1.57-abort"
+  lang: "[Rust][] 1.57"
+  text: "Built with `--release` and `profile.release.panic = \"abort\"`."
+- name: "rust-1.57-abort-upx"
+  lang: "[Rust][] 1.57"
+  text: "Built with `--release`, `profile.release.panic = \"abort\"`, and packed with [upx][]."
 - name: "rust-1.57-strip"
   lang: "[Rust][] 1.57"
   text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`, then stripped with `strip`."
@@ -46,10 +52,10 @@
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.opt-level = \"z\"`."
 - name: "rust-1.57-oz-upx"
   lang: "[Rust][] 1.57"
-  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.opt-level = \"z\"`, then packed with [upx][]."
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.panic = \"abort\"`, and `profile.release.opt-level = \"z\"`, then packed with [upx][]."
 - name: "rust-1.57-all"
   lang: "[Rust][] 1.57"
-  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, and `profile.release.lto = true`, then stripped with `strip`."
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
 - name: "rust-1.57-all-upx"
   lang: "[Rust][] 1.57"
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
