--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -59,6 +59,18 @@
 - name: "rust-1.57-all-upx"
   lang: "[Rust][] 1.57"
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
+- name: "rust-nightly-build-std"
+  lang: "[Rust][] Nightly"
+  text: "Built with `--release`, `build-std=std,panic_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`."
+- name: "rust-nightly-build-std-upx"
+  lang: "[Rust][] Nightly"
+  text: "Built with `--release`, `build-std=std,panic_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`, then packed with [upx][]."
+- name: "rust-nightly-immediate-abort"
+  lang: "[Rust][] Nightly"
+  text: "Built with `--release`, `build-std=std,panic_abort`, `build-std-features=panic_immediate_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`."
+- name: "rust-nightly-immediate-abort-upx"
+  lang: "[Rust][] Nightly"
+  text: "Built with `--release`, `build-std=std,panic_abort`, `build-std-features=panic_immediate_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`, then packed with [upx][]."
 - name: "c-glibc"
   lang: "C"
   text: "Statically linked against [glibc][]."
