--- a/src/rust/opt-nostd/Cargo.toml
+++ b/src/rust/opt-nostd/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 [dependencies]
 
 [profile.release]
+panic = "abort" # abort on panic
+# strip = true  # strip symbols (requires nightly)
 opt-level = "z" # optimize for size
+lto = true # enable LTO
