bin/table/bins.yaml: update rust-all and rust-nostd descriptions

--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -58,13 +58,13 @@
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
 - name: "rust-1.57-all-upx"
   lang: "[Rust][] 1.57"
-  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
 - name: "rust-1.57-nostd"
   lang: "[Rust][] 1.57"
-  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, then stripped with `strip`."
+  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
 - name: "rust-1.57-nostd-upx"
   lang: "[Rust][] 1.57"
-  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, then stripped with `strip` and packed with [upx][]."
+  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
 # these fail with an error, see nightly for info
 # - name: "rust-nightly-build-std"
 #   lang: "[Rust][] Nightly"
