--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -23,6 +23,18 @@
 - name: "go-1.17-ldflags-upx"
   lang: "[Go][] 1.17"
   text: "Built with `-ldflags=\"-s -w\"` and packed with [upx][]."
+- name: "go-1.18beta1-default"
+  lang: "[Go][] 1.18beta1"
+  text: "Default build options."
+- name: "go-1.18beta1-ldflags"
+  lang: "[Go][] 1.18beta1"
+  text: "Built with `-ldflags=\"-s -w\"`."
+- name: "go-1.18beta1-default-upx"
+  lang: "[Go][] 1.18beta1"
+  text: "Built with defaults and packed with [upx][]."
+- name: "go-1.18beta1-ldflags-upx"
+  lang: "[Go][] 1.18beta1"
+  text: "Built with `-ldflags=\"-s -w\"` and packed with [upx][]."
 - name: "rust-1.57-default"
   lang: "[Rust][] 1.57"
   text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`."
@@ -59,13 +71,15 @@
 - name: "rust-1.57-all-upx"
   lang: "[Rust][] 1.57"
   text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
-- name: "rust-1.57-nostd"
-  lang: "[Rust][] 1.57"
-  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
-- name: "rust-1.57-nostd-upx"
-  lang: "[Rust][] 1.57"
-  text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
-# these fail with an error, see nightly for info
+
+# these fail with an error, see Dockerfile for more info
+# - name: "rust-1.57-nostd"
+#   lang: "[Rust][] 1.57"
+#   text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
+# - name: "rust-1.57-nostd-upx"
+#   lang: "[Rust][] 1.57"
+#   text: "Dependencies on `std` removed.  Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
+# these fail with an error, see Dockerfile for info
 # - name: "rust-nightly-build-std"
 #   lang: "[Rust][] Nightly"
 #   text: "Built with `--release`, `build-std=std,panic_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`."
