--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -23,18 +23,30 @@
 - name: "go-1.17-ldflags-upx"
   lang: "[Go][] 1.17"
   text: "Built with `-ldflags=\"-s -w\"` and packed with [upx][]."
-- name: "go-1.18beta1-default"
-  lang: "[Go][] 1.18beta1"
+- name: "go-1.18rc1-default"
+  lang: "[Go][] 1.18rc1"
   text: "Default build options."
-- name: "go-1.18beta1-ldflags"
-  lang: "[Go][] 1.18beta1"
+- name: "go-1.18rc1-ldflags"
+  lang: "[Go][] 1.18rc1"
   text: "Built with `-ldflags=\"-s -w\"`."
-- name: "go-1.18beta1-default-upx"
-  lang: "[Go][] 1.18beta1"
+- name: "go-1.18rc1-default-upx"
+  lang: "[Go][] 1.18rc1"
   text: "Built with defaults and packed with [upx][]."
-- name: "go-1.18beta1-ldflags-upx"
-  lang: "[Go][] 1.18beta1"
+- name: "go-1.18rc1-ldflags-upx"
+  lang: "[Go][] 1.18rc1"
   text: "Built with `-ldflags=\"-s -w\"` and packed with [upx][]."
+- name: "tinygo-0.22-default"
+  lang: "[TinyGo][] 0.22.0"
+  text: "Default build options."
+- name: "tinyGo-0.22-nodebug"
+  lang: "[TinyGo][] 0.22.0"
+  text: "Built with `-no-debug`."
+- name: "tinygo-0.22-default-upx"
+  lang: "[TinyGo][] 0.22.0"
+  text: "Built with defaults and packed with [upx][]."
+- name: "tinygo-0.22-ldflags-upx"
+  lang: "[TinyGo][] 0.22.0"
+  text: "Built with `-no-debug` and packed with [upx][]."
 - name: "rust-1.57-default"
   lang: "[Rust][] 1.57"
   text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`."
