--- a/bin/table/bins.yaml
+++ b/bin/table/bins.yaml
@@ -104,6 +104,44 @@
 # - name: "rust-nightly-immediate-abort-upx"
 #   lang: "[Rust][] Nightly"
 #   text: "Built with `--release`, `build-std=std,panic_abort`, `build-std-features=panic_immediate_abort`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.panic = \"abort\"`, then packed with [upx][]."
+
+- name: "rust-1.59-default"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`."
+- name: "rust-1.59-default-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and packed with [upx][]."
+- name: "rust-1.59-abort"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release` and `profile.release.panic = \"abort\"`."
+- name: "rust-1.59-abort-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `profile.release.panic = \"abort\"`, and packed with [upx][]."
+- name: "rust-1.59-strip"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`, then stripped with `strip`."
+- name: "rust-1.59-strip-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release` and `build.rustflags = \"-C target-feature=+crt-static\"`, then stripped with `strip` and packed with [upx][]."
+- name: "rust-1.59-lto"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.lto = true`."
+- name: "rust-1.59-lto-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.lto = true`, then packed with [upx][]."
+- name: "rust-1.59-oz"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, and `profile.release.opt-level = \"z\"`."
+- name: "rust-1.59-oz-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.panic = \"abort\"`, and `profile.release.opt-level = \"z\"`, then packed with [upx][]."
+- name: "rust-1.59-all"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip`."
+- name: "rust-1.59-all-upx"
+  lang: "[Rust][] 1.59"
+  text: "Built with `--release`, `build.rustflags = \"-C target-feature=+crt-static\"`, `profile.release.opt-level = \"z\"`, `profile.release.panic = \"abort\"`, and `profile.release.lto = true`, then stripped with `strip` and packed with [upx][]."
+
 - name: "c-glibc"
   lang: "C"
   text: "Statically linked against [glibc][]."
